This must be a 64 bit computation for disks larger than 4GB.

* This closes ticket #8460.
* Patch from jahaiku, thanks!